[gd_scene load_steps=9 format=3 uid="uid://cawu8ux7mhxj3"]

[ext_resource type="Script" uid="uid://dl1r4u75dq3q1" path="res://src/levels/minigames/yankandy/pin.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cotwaps3i71sx" path="res://src/audio/sfx/sfx.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://bj2edevnmtnm8" path="res://src/levels/minigames/yankandy/pin.png" id="3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_abc12"]
size = Vector2(5.20606, 3.8767)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_def34"]
polygon = PackedVector2Array(-10.084, -24.5488, -15.0622, -18.7927, -14.7603, -11.3257, -5.89267, -11.3257, -6.03912, -20.3484)

[sub_resource type="Animation" id="Animation_ghi56"]
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pin_score_flag:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(0.25, 0.25, 0.25),
"update": 0,
"values": [0.0, 1.0, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"anim_popup_score"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pin_score_flag:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pin_score_flag:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(3, 3), Vector2(8, 8), Vector2(2, 2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("pin_score_flag/pin_score_text/pin_score_bg:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.172264, 0.335938, 0.132538, 1)]
}

[sub_resource type="Animation" id="Animation_jkl78"]
resource_name = "secret_pin_animation"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pin_score_flag:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(0.25, 0.25, 0.25),
"update": 0,
"values": [0.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pin_score_flag:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pin_score_flag:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(3, 3), Vector2(8, 8), Vector2(2, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pin_score_flag/pin_score_text/pin_score_bg:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.586597, 0.179535, 0.621094, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("pin_score_flag/pin_score_text:text")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["5000", "Bonus"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mno90"]
_data = {
&"pin_score_anim": SubResource("Animation_ghi56"),
&"secret_pin_animation": SubResource("Animation_jkl78")
}

[node name="pin" type="RigidBody2D"]
position = Vector2(166.5, 273.5)
scale = Vector2(0.328125, 0.328125)
freeze = true
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1")
box_area = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9, 2.10583)
rotation = -0.831498
scale = Vector2(1.32773, 1.5625)
shape = SubResource("RectangleShape2D_abc12")

[node name="pin_sprite" type="Sprite2D" parent="."]
position = Vector2(-9.18216, -23.6945)
texture = ExtResource("3")
offset = Vector2(0.914295, 24.5305)

[node name="LightOccluder2D" type="LightOccluder2D" parent="pin_sprite"]
z_index = 2
position = Vector2(9.18216, 23.6945)
occluder = SubResource("OccluderPolygon2D_def34")

[node name="sfx" parent="." instance=ExtResource("2")]

[node name="score_animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mno90")
}

[node name="pin_score_flag" type="Area2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(45.7143, 0)
scale = Vector2(2, 2)

[node name="pin_score_text" type="Label" parent="pin_score_flag"]
offset_top = -3.0
offset_right = 40.0
offset_bottom = 10.0
text = "Bonus"

[node name="pin_score_bg" type="Polygon2D" parent="pin_score_flag/pin_score_text"]
z_index = -1
position = Vector2(-3.04762, 12.1905)
color = Color(0.172264, 0.335938, 0.132538, 1)
polygon = PackedVector2Array(-1.52374, 1.52368, 47.2382, 1.52368, 47.2382, -13.7144, -1.52374, -13.7144)

[connection signal="body_entered" from="." to="." method="_on_pin_body_enter"]
